修复开发者工具

--- a/dev/lang_export.html
+++ b/dev/lang_export.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Echo Live 开发者工具：导出本地化文件</title>
+    <title>Echo MoJi 开发者工具：导出本地化文件</title>
     <link rel="icon" href="../res/image/favicon.ico">
     <link rel="stylesheet" href="../res/style/fh-ui.css">
     <link rel="stylesheet" href="../res/style/editor.css">
@@ -67,9 +67,9 @@
         <div class="tabpage-centent" data-navid="main">
             <!-- 输出标签页 -->
             <section class="tabpage-panel" role="tabpanel" data-pageid="output">
-                <h2 class="tabpage-panel-title" data-i18n="studio.text_to_messages.tabpage.output.title"></h2>
+                <h2 class="tabpage-panel-title">输出内容</h2>
                 <div class="echo-editor-form">
-                    <label for="output" data-i18n="editor.form.label.output_content"></label>
+                    <label for="output">输出内容</label>
                     <textarea id="output" class="code"></textarea>
                 </div>
             </section>
