--- a/dev/registry.html
+++ b/dev/registry.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Echo Live 开发者工具：注册表查看器</title>
+    <title>Echo MoJi 开发者工具：注册表查看器</title>
     <link rel="icon" href="../res/image/favicon.ico">
     <link rel="stylesheet" href="../res/style/fh-ui.css">
     <link rel="stylesheet" href="../res/style/editor.css">
@@ -37,19 +37,13 @@
         };
         translator.init('../');
     </script>
-    <script src="../res/data/avatar.js"></script>
-    <script src="../res/data/avatar_switch_effect.js"></script>
     <script src="../res/data/border_style.js"></script>
-    <script src="../res/data/emoji.js"></script>
     <script src="../res/data/font_weight.js"></script>
     <script src="../res/data/icon.js"></script>
-    <script src="../res/data/live_theme.js"></script>
-    <script src="../res/data/palette.js"></script>
-    <script src="../res/data/print_effect.js"></script>
+    <!-- <script src="../res/data/moji_theme.js"></script> -->
+    <script src="../res/data/next_effect.js"></script>
     <script src="../res/data/settings_about_link.js"></script>
     <script src="../res/data/settings_navigation.js"></script>
-    <script src="../res/data/sound.js"></script>
-    <script src="../res/data/text_style.js"></script>
     <script src="../res/data/timing_function.js"></script>
     <script src="../res/class/Icon.js"></script>
     <script src="../res/class/EchoLiveTools.js"></script>
@@ -131,8 +125,6 @@
                 role="tab"
                 aria-selected="true"
                 accesskey="1"
-                data-i18n="editor.tabpage.log.title"
-                data-i18n-title="editor.tabpage.log.description"
             >日志</button>
             <button
                 id="tabpage-nav-registry"
@@ -140,7 +132,7 @@
                 data-pageid="registry"
                 role="tab"
                 aria-selected="false"
-                accesskey="2"\
+                accesskey="2"
             >注册表</button>
         </nav>
 
