--- a/settings.html
+++ b/settings.html
@@ -33,6 +33,7 @@
     <script src="res/data/border_style.js"></script>
     <script src="res/data/font_weight.js"></script>
     <script src="res/data/next_effect.js"></script>
+    <script src="res/data/random_method.js"></script>
     <script src="res/data/timing_function.js"></script>
     <script src="res/class/Icon.js"></script>
     <script src="res/class/EchoLiveTools.js"></script>
