--- a/echomoji.html
+++ b/echomoji.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="page_title.echomoji">Echo MoJi</title>
     <link rel="stylesheet" href="res/style/echomoji.css">
+    <link rel="stylesheet" href="res/style/echo.css">
     <script src="lib/jquery-3.7.1.min.js"></script>
     <script src="config.js"></script>
     <script src="message.js"></script>
-    <script src="res/class/EchoMoJi.js"></script>
-    <script src="res/script/echomoji.js"></script>
     <script src="app.js"></script>
     <script src="res/class/EchoLiveSystem.js"></script>
     <script src="res/data/root.js"></script>
@@ -25,6 +24,11 @@
         };
         translator.init();
     </script>
+    <script src="res/data/text_style.js"></script>
+    <script src="res/class/EchoLiveTools.js"></script>
+    <script src="res/class/FHUI.js"></script>
+    <script src="res/class/EchoMoJi.js"></script>
+    <script src="res/script/echomoji.js"></script>
 </head>
 <body onclick="location.reload();">
     <span id="messager"><span data-i18n="echomoji.init">跑马灯已载入！</span></span>
