--- a/echomoji.html
+++ b/echomoji.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="page_title.echomoji">Echo MoJi</title>
+    <link rel="icon" href="res/image/favicon.ico">
     <link rel="stylesheet" href="res/style/echomoji.css">
     <link rel="stylesheet" href="res/style/echo.css">
+    <link rel="stylesheet" href="res/style/message-effect.css">
     <script src="lib/jquery-3.7.1.min.js"></script>
     <script src="config.js"></script>
     <script src="message.js"></script>
