新增主题功能

--- a/echomoji.html
+++ b/echomoji.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="res/style/echomoji.css">
     <link rel="stylesheet" href="res/style/echo.css">
     <link rel="stylesheet" href="res/style/message-effect.css">
+    <link rel="stylesheet" href="res/style/theme/vanilla.css" id="echo-moji-theme">
     <script src="lib/jquery-3.7.1.min.js"></script>
     <script src="config.js"></script>
     <script src="message.js"></script>
@@ -26,6 +27,7 @@
         };
         translator.init();
     </script>
+    <script src="res/data/theme.js"></script>
     <script src="res/data/text_style.js"></script>
     <script src="res/class/EchoLiveTools.js"></script>
     <script src="res/class/FHUI.js"></script>
