--- a/settings.html
+++ b/settings.html
@@ -35,6 +35,7 @@
     <script src="res/data/message_in_effect.js"></script>
     <script src="res/data/message_out_effect.js"></script>
     <script src="res/data/random_method.js"></script>
+    <script src="res/data/theme.js"></script>
     <script src="res/data/timing_function.js"></script>
     <script src="res/class/Icon.js"></script>
     <script src="res/class/EchoLiveTools.js"></script>
