现在会在载入时显示读取了多少条消息

--- a/echomoji.html
+++ b/echomoji.html
@@ -35,7 +35,7 @@
     <script src="res/script/echomoji.js"></script>
 </head>
 <body onclick="location.reload();">
-    <span id="messager"><span data-i18n="echomoji.init">跑马灯已载入！</span></span>
+    <span id="messager"><span data-i18n="echomoji.init"></span></span>
 
     <script src="res/script/i18n.js" defer></script>
 </body>
